--- a/baseandroid/build.gradle
+++ b/baseandroid/build.gradle
@@ -1,31 +1,48 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
+apply plugin: 'com.jakewharton.butterknife'
 android {
     compileSdkVersion 27
+
     defaultConfig {
-        applicationId "coder.yuan.base"
         minSdkVersion 17
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'com.jakewharton:butterknife:8.8.1'
+    api 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation project(':baseandroid')
+
+    //图片选择器
+    api 'cn.finalteam.rxgalleryfinal:library:1.1.3'
+    //动态权限申请
+    api 'pub.devrel:easypermissions:1.2.0'
+    //数据库
+    api 'org.litepal.android:core:1.6.1'
+    //gson
+    api 'com.google.code.gson:gson:2.8.4'
+    //网络请求
+    api 'com.squareup.okhttp3:okhttp:3.10.0'
+    //二维码扫描
+    api 'cn.bingoogolapple:bga-qrcode-zxing:1.2.1'
 }
