--- a/baseandroid/build.gradle
+++ b/baseandroid/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     //数据库
     implementation 'org.litepal.guolindev:core:3.1.1'
     //图片选择器
-    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.5.8'
+//    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.5.8'
 
     //二维码扫描
     implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.7'
